--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Memory: Web Components</title>
     <script type="module" src="/src/main.ts" defer></script>
     <script type="module" src="/src/memory/memory.ts" defer></script>
   </head>
