--- a/index.html
+++ b/index.html
@@ -16,8 +16,23 @@
     </div>
 
     <template class="menu">
-      <style>@import '/src/memory/menu.css'</style>
-      <p>hello</p>
+      <style>
+        @import '/src/memory/menu.css';
+      </style>
+
+      <div class="menu__container">
+        <div class="menu__banner">Memory</div>
+        <div class="menu__item">
+          <div class="menu__title">Select Difficulty</div>
+          <input type="range" id="difficulty" name="difficulty" min="1" max="3" />
+        </div>
+        <div class="menu__item">
+          <div class="menu__title">Leaderboards</div>
+        </div>
+        <div class="menu__item">
+          <div class="menu__button--play">Play!</div>
+        </div>
+      </div>
     </template>
   </body>
 </html>
