--- a/index.html
+++ b/index.html
@@ -4,91 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory: Web Components</title>
-    <script type="module" src="/src/main.ts" defer></script>
+    <title>Memory</title>
+    <script type="module" src="/src/app.ts"></script>
   </head>
   <body>
-    <memory-game></memory-game>
-    <memory-menu></memory-menu>
-    <template id="memory">
-      <style>
-        memory-card {
-          cursor: pointer;
-          background-color: transparent;
-          width: 240px;
-          height: 240px;
-          border: 1px solid #f1f1f1;
-          perspective: 1000px; /* Remove this if you don't want the 3D effect */
-        }
-
-        /* This container is needed to position the front and back side */
-        .card-flip {
-          position: relative;
-          width: 100%;
-          height: 100%;
-          text-align: center;
-          transition: transform 0.8s;
-          transform-style: preserve-3d;
-        }
-
-        .card-front,
-        .card-back {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          -webkit-backface-visibility: hidden; /* Safari */
-          backface-visibility: hidden;
-        }
-
-        .card-front {
-          background-color: #bbb;
-          color: black;
-        }
-
-        [data-clicked] .card-flip {
-          transform: rotateY(180deg);
-        }
-
-        [data-completed] .card-flip {
-          transform: rotateY(180deg);
-        }
-
-        .card-back {
-          background-color: dodgerblue;
-          color: white;
-          transform: rotateY(180deg);
-        }
-      </style>
-    </template>
-    <template id="menu">
-      <style>
-        .menu__container {
-          width: max-content;
-          padding: 1rem;
-          background-color: #000;
-        }
-
-        .menu__item {
-          background-color: #d22b1e;
-          padding: 1rem 2rem;
-          cursor: pointer;
-          display: block;
-        }
-
-        .menu__item:hover {
-          background-color: #000;
-        }
-      </style>
-      <div class="menu__container">
-        <div class="menu__banner">Memory</div>
-        <div class="menu__item">
-          <div class="menu__title">Select Difficulty</div>
-          <input type="range" id="difficulty" name="difficulty" min="1" max="3" />
-        </div>
-        <div class="menu__item">
-          <div class="menu__button--play">Play!</div>
-        </div>
-      </div>
-    </template>
+    <memory-component></memory-component>
+    <!-- TEMPLATES: </memory-component> -->
   </body>
 </html>
