--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory</title>
+    <title>Memory: ESNext</title>
     <script type="module" src="/src/app.ts" defer></script>
   </head>
   <body>
