changed the name of memory component

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="/src/app.ts" defer></script>
   </head>
   <body>
-    <memory-component></memory-component>
-    <!-- TEMPLATES: </memory-component> -->
+    <memory-module></memory-module>
+    <!-- TEMPLATES: </memory-module> -->
   </body>
 </html>
