--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <script type="module" src="/src/app.ts" defer></script>
   </head>
   <body>
-    <memory-module></memory-module>
-    <!-- TEMPLATES: </memory-module> -->
+    <!-- <app /> -->
+    <memory-module>
+      <div slot="memory__front">the front</div>
+      <div slot="memory__back">the back</div>
+    </memory-module>
+
+    <!-- TEMPLATES: <memory-module /> -->
+
+    <!-- <memory-card /> -->
+    <template id="memory-card">
+      <div class="memory__card">
+        <div class="memory__wrap">
+          <div class="memory__front"><slot name="memory__front">framme</slot></div>
+          <div class="memory__back"><slot name="memory__back">backe</slot></div>
+        </div>
+      </div>
+    </template>
   </body>
 </html>
