--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory: ESNext</title>
-    <script type="module" src="/src/app.ts" defer></script>
+    <script type="module" src="app.ts" defer></script>
+    <link rel="stylesheet" href="app.css" />
   </head>
   <body>
     <h1 class="title">hello</h1>
