--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <h1 class="title">hello</h1>
+    <h1 class="title">Memory</h1>
 
     <!-- <app /> -->
     <memory-module></memory-module>
