progress on template generation functiom

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- <memory-card /> -->
     <template id="card">
       <div class="card" data-id>
-        <div data-front class="front"><slot name="front">framme</slot></div>
-        <div data-back class="back"><slot name="back">backe</slot></div>
+        <div data-element="card-front" class="card-front"></div>
+        <div data-element="card-back" class="card-back"></div>
       </div>
     </template>
   </body>
