--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
   </head>
   <body>
     <h1 class="title">Memory</h1>
-
     <!-- <app /> -->
     <memory-module></memory-module>
 
     <!-- TEMPLATES: <memory-module /> -->
-
     <!-- <memory-card /> -->
     <template id="card">
       <div class="card" data-id>
-        <div data-element="card-front" class="card-front"></div>
+        <div data-element="card-front" class="card-front">Front</div>
         <div data-element="card-back" class="card-back"></div>
       </div>
     </template>
