rename in HTML comment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 class="title">Memory</h1>
-    <!-- <app /> -->
+    <!-- < APP > -->
     <memory-module></memory-module>
 
     <!-- TEMPLATES: <memory-module /> -->
