--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <h1 class="title">Memory</h1>
     <!-- < APP > -->
-    <memory-module></memory-module>
-
+    <div id="app"></div>
     <!-- TEMPLATES: <memory-module /> -->
     <!-- <memory-card /> -->
     <template id="card">
