--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="app"></div>
     <!-- TEMPLATES: <memory-module /> -->
     <!-- <memory-card /> -->
-    <template id="card">
-      <div class="card" data-id>
+    <template name="memory-card">
+      <div class="memory-card" data-id>
         <div data-element="card-front" class="card-front">Front</div>
         <div data-element="card-back" class="card-back"></div>
       </div>
